Revert "fix insert image bug and remove the multipart image add and change it with image url"
This reverts commit 2eb88dc9020c50a75d7fdddbc74deecda0ebeb18.