@@ -1,12 +1,11 @@
 package com.example.backend.service;
 
 import com.example.backend.dto.DeviceDto;
-import com.example.backend.entity.Department;
 import com.example.backend.entity.Device;
-import com.example.backend.exceptions.DepartmentNotFoundException;
-import com.example.backend.repository.DepartmentRepository;
+import com.example.backend.entity.Department;
 import com.example.backend.repository.DeviceRepository;
-import lombok.RequiredArgsConstructor;
+import com.example.backend.repository.DepartmentRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -16,21 +15,26 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
-
-@RequiredArgsConstructor
 @Service
 public class DeviceService {
+
     private static final String UPLOAD_DIR = "uploads/";
 
-    private final DeviceRepository deviceRepository;
+    @Autowired
+    private DeviceRepository deviceRepository;
 
-    private final DepartmentRepository departmentRepository;
+    @Autowired
+    private DepartmentRepository departmentRepository;
 
     // Get all devices
     public List<DeviceDto> getAllDevices() {
         List<Device> devices = deviceRepository.findAll();
-        return devices.stream().map(this::convertToDto).toList();
+        return devices.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     // Get device by ID
@@ -41,15 +45,25 @@ public class DeviceService {
     }
 
     @Transactional
-    public DeviceDto createDevice(DeviceDto deviceDto) {
-        Department department = departmentRepository.findById(deviceDto.getDepartmentId()).orElseThrow(() -> new DepartmentNotFoundException("Department not found"));
+    // Create a new device
+    public DeviceDto createDevice(DeviceDto deviceDto, MultipartFile imageFile) {
+        // Check if the department exists
+        Department department = departmentRepository.findById(deviceDto.getDepartmentId())
+                .orElseThrow(() -> new RuntimeException("Department not found"));
+
+        // Save image if provided
+        String imageUrl = null;
+        if (imageFile != null && !imageFile.isEmpty()) {
+            imageUrl = saveImage(imageFile);
+        }
 
         // Create and save the device
         Device device = new Device();
         device.setName(deviceDto.getName());
         device.setSerialNumber(deviceDto.getSerialNumber());
         device.setDepartment(department);
-        device.setImageUrl(deviceDto.getImageUrl());
+        device.setImageUrl(imageUrl);
+
         device = deviceRepository.save(device);
         return convertToDto(device);
     }
@@ -87,7 +101,13 @@ public class DeviceService {
 
     // Helper method to convert Device to DeviceDto
     private DeviceDto convertToDto(Device device) {
-        return new DeviceDto(device.getName(), device.getSerialNumber(), device.getDepartment().getId(),
+        return new DeviceDto(
+                device.getId(),
+                device.getName(),
+                device.getSerialNumber(),
+                Optional.ofNullable(device.getDepartment())
+                        .map(Department::getId)
+                        .orElse(null),
                 device.getImageUrl()
         );
     }
